--- a/ja.strings
+++ b/ja.strings
@@ -70,7 +70,7 @@
 "ENABLEGET" = "Radar 2.0 Map Fetchを有効";
 "ENABLEGETDESC" = "Radar 2.0 Map Fetchを有効にすると、中央サーバーからデータを取得して追加のポケモン、ジム、ポケストップを表示します。";
 "JOYSTICKDELTA" = "ジョイスティック縦軸 +/- (px)";
-"JOYSTICKDELTAX" = "Joystick X Delta +/- (px)";
+"JOYSTICKDELTAX" = "ジョイスティック横軸 +/- (px)";
 "SAVE" = "保存";
 "ROUTESMENU" = "ルートメニュー";
 "START" = "開始";
@@ -78,8 +78,8 @@
 "EDIT" = "ルートファイルの編集";
 "STOP" = "停止";
 "ACTIVATE" = "ドナーバージョンを有効化";
-"PATREON" = "Activate with Patreon";
-"DISCORDA" = "Activate with Discord";
+"PATREON" = "Patreonを通じて有効化";
+"DISCORDA" = "Discordを通じて有効化";
 "DEEPLINK" = "ディープリンク";
 "GPX" = "GPXルート";
 "NODONOR" = "この機能はドナーである必要があります。設定でドナーを有効にしてください。";
@@ -89,44 +89,44 @@
 "STATUS" = "状態";
 "AUTOHOME" = "ボールスローを調整";
 "CUSTOMSPEED" = "Custom Speed (0-16)";
-"HIDEGYM" = "Hide Gym Mode Button";
+"HIDEGYM" = "ジムモードボタンを隠す";
 "SPECIALLIST" = "Special Pokémon List";
-"COOLDOWN" = "Cooldown Timer";
-"HIDECOOLDOWN" = "Hide Cooldown Timer Button";
-"HIDETAPTOWALK" = "Hide Tap to Walk Button";
-"HIDEGPX" = "Hide GPX Button";
-"HIDEPREVIOUSLOC" = "Hide Previous Button";
-"HIDEIV" = "Hide IV Button";
+"COOLDOWN" = "クールダウンタイマー";
+"HIDECOOLDOWN" = "クールダウンタイマーを隠す";
+"HIDETAPTOWALK" = "Tap to walkボタンを隠す";
+"HIDEGPX" = "GPXボタンを隠す";
+"HIDEPREVIOUSLOC" = "戻るボタンを隠す";
+"HIDEIV" = "個体値ボタンを隠す";
 "PARTNERCOORDS" = "Partners";
 "PARTNERPARAMS" = "Options";
 "PARTNERCOORDSDESC" = "For access to these premium coords, you may require a subscription. Please contact the provider directly.";
-"OVERRIDE"= "Startup/Forever";
-"FORCEUPDATES" = "Force Location Updates";
+"OVERRIDE"= "起動時から/永久に";
+"FORCEUPDATES" = "位置情報の上書きを強制する";
 "SPOOFING" = "Spoofing";
 "KEY" = "Key";
-"LOOPGPX" = "Loop GPX Route";
-"PREVIOUSLOCATION" = "Previous Location";
-"GENERATEGPX" = "Generate GPX";
-"SECONDARY" = "Secondary Device";
-"SECONDARYMSG" = "Are you activating a second device? (Tier 2 License Required)";
+"LOOPGPX" = "GPXルートを繰り返す";
+"PREVIOUSLOCATION" = "前の位置";
+"GENERATEGPX" = "GPXルートを生成";
+"SECONDARY" = "2つ目の端末";
+"SECONDARYMSG" = "あなたは2つ目の端末を有効化しようとしていますか？ (Tier 2 ライセンスが必要です！)";
 "HELP" = "HELP";
-"NEEDHELP" = "Need Help?";
+"NEEDHELP" = "助けが必要ですか？";
 "ASIAFIX" = "Asia Patreon Fix";
 "HOSTMAP" = "Host you own Map";
-"ENABLEWORKER" = "Enable Worker Mode";
-"SENDPROTOS" = "Send Raw Protos";
-"FREQUENCY" = "Frequency (Seconds)";
+"ENABLEWORKER" = "ワーカーモードを有効化する";
+"SENDPROTOS" = "Protoファイルを直接送信する";
+"FREQUENCY" = "送信間隔 (秒)";
 "ENABLEFETCH" = "Enable Location Fetch";
 "COORDSGEN" = "Coords Generator";
-"POKEMON" = "Pokemon";
-"RAIDS" = "Raids";
-"QUESTS" = "Quests";
-"YES" = "Yes";
-"NO" = "No";
-"AUTOGENERATE" = "Auto Generate";
+"POKEMON" = "ポケモン";
+"RAIDS" = "レイド";
+"QUESTS" = "クエスト";
+"YES" = "はい";
+"NO" = "いいえ";
+"AUTOGENERATE" = "自動的に生成する";
 "DRAWGPX" = "Draw GPX Route";
-"STARTUPFOREVER" = "Startup/Forever";
-"COOLDOWN" = "Cooldown Timer";
+"STARTUPFOREVER" = "起動時から/永久に";
+"COOLDOWN" = "クールダウンタイマー";
 "FORCEDCOORDS" = "Forced Coords List";
-"AUTORESUME" = "Auto Resume GPX";
+"AUTORESUME" = "GPXルートを自動的に再開する";
 "NESTS" = "Nests";
